--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -56,8 +56,8 @@ body,
 .workspace {
   max-width: 680px;
   min-width: 440px;
-  padding: 24px 0px 24px 24px;
-  overflow-y: auto;
+  padding: 15px 15px 15px 15px;
+  // overflow-y: auto;
   min-height: 0;
   height: 100%;
 }
